# lazunex

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  alembic.ini  compose.yaml  pyproject.toml
config/: rulecheck_config.example.json
local/aws_mock/: Dockerfile  server.py
local/smoke/: local_smoke.sh
migrations/: env.py
src/app/: main.py
src/app_tool/: __init__.py  cli.py  registry.py  runner.py  specs.py
src/db/: ddl.sql
src/tools/: check_api_contracts.py  check_api_descriptions.py  check_api_exception_summaries.py  check_api_function_exception_policy.py  check_api_function_names.py  check_api_function_resource_usage.py  check_api_function_tests.py  check_api_managed_literals.py  check_api_mermaid_sequences.py  check_api_router_ignored_returns.py  check_api_router_logging_tests.py  check_api_router_test_asserts.py  check_api_router_tests.py  check_api_router_unit_test_factors.py  check_api_sequence_success_responses.py  check_api_sql_ddl_usage.py  check_api_status_samples.py  check_bool_router_conditions.py  check_constant_bool_returns.py  check_e2e_case_evidences.py  check_e2e_specs.py  check_exception_router_handlers.py  check_operational_logging.py  check_router_error_response_returns.py  e2e_models.py  generate_api_detail_design.py  generate_api_list.py  generate_api_message_catalog.py  generate_api_pytest_cases.py  generate_api_sequences.py  generate_api_unit_test_factors.py  generate_db_crud.py  generate_db_er_diagram.py  generate_db_table_specs.py  generate_e2e_case_list.py  generate_e2e_factor_yaml.py  generate_e2e_scenarios.py  generate_external_crud.py  generate_openapi_if_specs.py  generate_queries.py  (+3 more)
tests/: conftest.py  test_api_error_responses.py  test_api_router_sequences.py  test_api_schema_constraints.py  test_api_sequence_functions.py  test_api_status_samples.py  test_db_query.py  test_db_session.py  test_health.py  test_mysql_integration.py  test_operational_logging.py  test_sequence_types.py
tests/integrations/: test_api_gateway_control_provider.py  test_aws_boto3.py  test_identity_provider.py  test_secret_values_provider.py
tests/local/: test_aws_mock_server.py
tests/tools/: test_app_tool_cli.py  test_app_tool_docs.py  test_check_api_contracts.py  test_check_api_descriptions.py  test_check_api_exception_summaries.py  test_check_api_function_exception_policy.py  test_generate_api_list.py  (+31 more)
(+774 files in other folders)
