[project]
name = "lazunex"
version = "0.1.0"
description = "Internal API Hub and API access control service"
readme = "README.md"
authors = [
    { name = "tsuji tomonori", email = "160441107@ccalumni.meijo-u.ac.jp" }
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.4",
    "anyio>=4.13.0",
    "asyncmy>=0.2.11",
    "boto3>=1.35",
    "cryptography>=48.0.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.3",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "sqlglot>=30.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "asgi-lifespan>=2.1.0",
    "boto3-stubs[apigateway,cognito-idp,secretsmanager]>=1.43.18",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.15",
    "sqlfluff>=4.2.1",
    "testcontainers[mysql]>=4.14.2",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=src/app",
    "--cov=src/tools",
    "--cov-branch",
    "--cov-report=term-missing",
]
markers = [
    "integration: tests requiring external services",
]

[tool.coverage.run]
branch = true
source = [
    "src/app",
    "src/tools",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "ASYNC",
    "S",
    "RUF",
]
ignore = [
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.sqlfluff.core]
dialect = "mysql"
templater = "placeholder"
exclude_rules = [
    "LT02",
    "LT05",
    "ST09",
]
large_file_skip_byte_limit = 0
max_line_length = 100
sql_file_exts = ".sql"

[tool.sqlfluff.templater.placeholder]
param_regex = '(?<![:\\w\\\\]):\\w+'

[tool.sqlfluff.indentation]
tab_space_size = 4


[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]
